--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
-    margin: 3px; 
+    align-items: center; 
 }
 input {
     width: 3em;
@@ -17,4 +16,9 @@ input {
     padding: 0;
     font-weight: bold;
     border: green solid 2px;
+    margin: 3px;
+    background: darkgray;
+}
+input:hover {
+    background: white;
 }
